# starfwi

./: .clangd.example  .gitignore  CMakeLists.txt  Containerfile  Makefile  README.md  amazon_linux_setup_cpu_only.sh  compose.gpu.yml  compose.yml  cpu_1_amzn_linux_setup.sh  cpu_2_amzn_linux_starpu_and_starfwi.sh  gpu_1_amzn_linux_nvidia_drivers.sh  gpu_2_amzn_linux_cuda_toolkit.sh  gpu_3_amzn_linux_setup.sh  gpu_4_amzn_linux_nvme.sh  gpu_5_amzn_linux_starpu_starfwi.sh  gpu_6_amzn_linux_cleanup.sh  starpu_and_starfwi_setup_cpu_only.sh
.local_shared_volume/: .gitignore  appfile  appfile.example
include/acoustics/: finite_difference_solver.hpp  misfit.hpp  receiver_recorder.hpp
include/codelets/: backward_propagation.hpp  compute_misfit.hpp  forward_propagation.hpp  save_observed.hpp
include/utils/: cli_parser.hpp  receiver_geometry.hpp  segy_loader.hpp  seismogram_io.hpp  simulation_config.hpp  snapshot_writer.hpp  wavelet.hpp
scripts/: imds_watchdog.sh  run_experiment.sh  visualize_snapshots.py
src/: main.cpp  main_fwi.cpp  main_modeling.cpp
src/acoustics/: finite_difference_solver.cpp  misfit.cpp  receiver_recorder.cpp
src/codelets/: backward_propagation.cpp  backward_propagation.cu  compute_misfit.cpp  forward_propagation.cpp  forward_propagation.cu  save_observed.cpp
src/utils/: cli_parser.cpp  segy_loader.cpp  seismogram_io.cpp  snapshot_writer.cpp  wavelet.cpp
